fixed dark mode style issues

--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* background: #f8f8f8; */
   min-height: 588px;
   flex-wrap: wrap;
 }
@@ -42,7 +41,7 @@
   border: 1px solid rgb(51, 49, 49);
   transition: 0.3 ease-in;
   font-weight: bold;
-  color: rgb(51, 49, 49);
+  color: rgb(24, 23, 23);
 }
 
 .button:hover,
