--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -22,8 +22,8 @@
 
 .footer-items a {
   margin-left: 5px;
-  opacity: 0.5;
   text-decoration: none;
+  transition: 0.2s ease-in;
 }
 
 .footer-items a:hover,
