--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-.light {
+/* .light {
   background-color: #ffffff;
   color: #27292d;
 }
@@ -34,7 +34,7 @@ h6,
 p,
 span {
   color: #dfdfdf;
-}
+} */
 
 html,
 body,
@@ -163,12 +163,6 @@ table {
 
 body {
   font-family: 'Lato', sans-serif;
-  /* --accent-color: orangered; */
-  /* --background-color: white; */
-}
-
-body.dark {
-  /* --accent-color: #333; */
 }
 
 html {
